WIP: reflection system

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* suggestion/request: cache made with flat_map + object pools + new/delete overloads so as to get rid of shared pointers (+ cache coherency)
+# suggestion/request: add iterative sorter to the algorithms
 * custom allocators and EnTT allocator-aware in general (long term feature, I don't actually need it at the moment) - see #22
 * scene management (I prefer the concept of spaces, that is a kind of scene anyway)
 * debugging tools (#60): the issue online already contains interesting tips on this, look at it
@@ -7,7 +9,16 @@
 * deep copy of a registry (or use the snapshot stuff to copy components and keep intact ids at least)
 * is it possible to iterate all the components assigned to an entity through a common base class?
 * optimize for empty components, it would be a mid improvement in terms of memory usage
+* prototype should offer a way to retrieve its internal registry
 * can we do more for shared libraries? who knows... see #144
 * work stealing job system (see #100)
-* reflection system (maybe)
 * composable looper so as to pack erased systems, compose runners at different rates and run them at once in the loop
+* meta: sort of meta view based on meta stuff to iterate entities, void * and meta info objects
+* meta: tests + doc (.md) for hierarchies, convertibles, casts, etc.
+* meta: add support for enums
+* meta: maybe convert overloads on meta_any are misleading...
+* registry::probe<component>(entt) (returns a component * if entt has the component, nullptr otherwise)
+* hashed string: add implicit check on construction for uniqueness (optional)
+* add a note about multithreading support to the README file
+* signals on entity creation/destruction
+* flexible views with "composable" filters
