WIP: updated TODO + more tests + bug fixing

--- a/TODO
+++ b/TODO
@@ -14,9 +14,8 @@
 * work stealing job system (see #100)
 * composable looper so as to pack erased systems, compose runners at different rates and run them at once in the loop
 * meta: sort of meta view based on meta stuff to iterate entities, void * and meta info objects
-* meta: tests + doc (.md) for hierarchies, convertibles, casts, etc.
+* meta: doc (.md) for hierarchies, convertibles, casts, etc.
 * meta: add support for enums
-* meta: maybe convert overloads on meta_any are misleading...
 * registry::probe<component>(entt) (returns a component * if entt has the component, nullptr otherwise)
 * hashed string: add implicit check on construction for uniqueness (optional)
 * add a note about multithreading support to the README file
